--- a/kube-flannel.yml
+++ b/kube-flannel.yml
@@ -158,7 +158,7 @@ spec:
       serviceAccountName: flannel
       initContainers:
       - name: install-cni
-        image: quay.io/coreos/flannel:v0.11.0-amd64
+        image: registry.cn-hangzhou.aliyuncs.com/dva-1024/flannel:v0.11.0-amd64
         command:
         - cp
         args:
@@ -172,7 +172,7 @@ spec:
           mountPath: /etc/kube-flannel/
       containers:
       - name: kube-flannel
-        image: quay.io/coreos/flannel:v0.11.0-amd64
+        image: registry.cn-hangzhou.aliyuncs.com/dva-1024/flannel:v0.11.0-amd64
         command:
         - /opt/bin/flanneld
         args:
